# Structures-Allocators-Library

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Code/: main.cpp
Code/Core/Memory/: byte.hpp  freelist_allocator.cpp  freelist_allocator.hpp  memory.hpp  memory_utils.hpp  pool_allocator.cpp  pool_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp
Code/Core/Structures/: array.hpp  dynamic_array.hpp  hash_map.hpp  list.hpp  rb_node.cpp  rb_node.hpp  rb_node_debug.hpp  rb_node_packed.cpp  rb_node_packed.hpp  rb_tree.cpp  rb_tree.hpp  string.hpp  view.hpp
Code/Core/Utilities/: cryptography.hpp  pch.hpp  types.hpp
Serrate/: main.cpp
Serrate/Memory/: byte.hpp  freelist_allocator.cpp  freelist_allocator.hpp  memory_utils.hpp  pool_allocator.cpp  pool_allocator.hpp  stack_allocator.hpp
Serrate/Structures/: array.hpp  bitset.hpp  dynamic_array.hpp  hash_map.hpp  list.hpp  named_array.hpp  rb_node.cpp  rb_node.hpp  rb_node_packed.cpp  rb_node_packed.hpp  rb_tree.cpp  rb_tree.hpp  string.hpp  string_view.hpp  view.hpp
Serrate/Utilities/: cryptography.hpp  types.hpp
